# stock-check-py

./: .gitignore  README.md  pyproject.toml  template.yaml
resources/: event1.json  event2.json
src/stock_check/: lambda_function.py
